[package]
name = "luna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.11"
rusqlite = { version = "0.30.0", features = ["bundled"] }
nom = "7.1.3"
dashmap = "5.5.3"
tokio = { version = "1.35.1", features = ["full"] }
